# INF3995

./: .gitlab-ci.yml  README.md  docker-compose.yml  launch.py
Crazyflie/: Dockerfile  Dockerfile.production  README.md
Crazyflie/Application/: .gitignore  Makefile  requirements.txt
Crazyflie/Application/Server/: README.md  app.py  requirements.txt
Crazyflie/Application/server-test/: T.py  test.py
Crazyflie/Application/src/: SGBA.c  SGBA.h  app.c  app.h  appData.h  batteryUnit.c  batteryUnit.h  lowLevelCommands.c  lowLevelCommands.h  median_filter.h  sensorsUnit.c  sensorsUnit.h  stateMachine.c  stateMachine.h  utils.h  wallfollowing_multiranger_onboard.c  wallfollowing_multiranger_onboard.h
Simulation/: Dockerfile  Dockerfile.production  README.md
Simulation/Application/: CMakeLists.txt  launch.sh  requirements.txt  test.py
Simulation/Application/Server/: README.md  app.py
Simulation/Application/controllers/: CMakeLists.txt
Simulation/Application/controllers/crazyflie_controlling/: CMakeLists.txt  battery_sensor.h  commander.cpp  commander.h  crazyflie_controlling.cpp  crazyflie_controlling.h  distance_sensors_manager.cpp  distance_sensors_manager.h  exploration.cpp  exploration.h  return_to_base.cpp  return_to_base.h  wall_follower.cpp  wall_follower.h
Simulation/Application/experiments/: crazyflie_controlling.argos
Simulation/Application/loop_functions/: CMakeLists.txt
Simulation/Application/loop_functions/crazyflie_loop_functions/: CMakeLists.txt  crazyflie_loop_functions.cpp  crazyflie_loop_functions.h
Simulation/Application/walls-generator/: Makefile
WebApp/: README.md
WebApp/Client/: Dockerfile  README.md  package-lock.json  package.json
WebApp/Client/public/: index.html
WebApp/Client/src/: App.css  App.js  App.test.js  index.test.js  jest.config.js  setupTests.js
WebApp/ClientsTest/: __init__.py  client1.py  client2.py  requirements.txt
WebApp/Server/: Dockerfile  Readme.md  api_test.py  app.py  requirements.txt
(+69 files in other folders)
